# gy_87

./: CMakeLists.txt  LICENSE  README.md  package.xml
include/gy_87/: GY87.h  MadgwickAHRS.h
launch/: gy_87.launch
params/: imu_covariance.yaml
scripts/: imu_statistics.py
src/: GY87.cpp  MPU6050.cpp  MadgwickAHRS.c  gy_87_node.cpp
